# kaos-tabular

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  scorecard.yml  security-full.yml  security-light.yml  security.yml  test.yml
docs/: security.md
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_tabular/: __init__.py  __main__.py  _path_resolver.py  _session.py  cli.py  engine.py  errors.py  readers.py  serve.py  tools.py
tests/: conftest.py
tests/benchmarks/: test_engine_perf.py
tests/fixtures/: LICENSE-FIXTURES.md  README.md  ledes98b.csv  ledes98b.json  ledes98b.sqlite  ledes98b.xlsx  records.json  simple.csv  states.json  states.sqlite  states.xlsx  unicode.csv
tests/integration/: test_mcp_tabular_pipeline.py
tests/unit/: test_adversarial.py  test_analytical_methods.py  test_battle.py  test_cli.py  test_engine.py  test_engine_helpers.py  test_path_injection.py  test_readers.py  test_serve.py  test_session_engines.py  test_sqlite_register.py  test_structured_ops.py  test_tools.py  test_vfs_path_resolution.py
